--- a/package.json
+++ b/package.json
@@ -2,30 +2,34 @@
   "name": "expensify",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Barna Rátkai",
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
   "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
     "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-preset-env": "1.5.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
+    "css-loader": "^3.6.0",
     "enzyme": "2.9.1",
     "enzyme-to-json": "1.5.1",
-    "jest": "20.0.4",
+    "jest": "^26.0.1",
     "live-server": "^1.2.0",
-    "moment": "2.18.1",
-    "node-sass": "4.5.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "7.0.0",
+    "package-lock-only": "0.0.4",
     "react": "15.6.1",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.3.0",
@@ -39,7 +43,11 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "webpack-cli": "^3.3.12"
   }
 }
