--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start" : "node server/server.js",
+    "heroku-postbuild" : "npm run build:prod"
   },
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -23,6 +25,7 @@
     "css-loader": "^3.6.0",
     "enzyme": "2.9.1",
     "enzyme-to-json": "1.5.1",
+    "express": "^4.17.1",
     "jest": "^26.0.1",
     "live-server": "^1.2.0",
     "mini-css-extract-plugin": "^0.9.0",
