--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Barna Rátkai",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -23,11 +22,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.6.0",
-    "enzyme": "2.9.1",
-    "enzyme-to-json": "1.5.1",
     "express": "^4.17.1",
-    "jest": "^26.0.1",
-    "live-server": "^1.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -40,17 +35,20 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
-    "react-test-renderer": "15.6.1",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "enzyme": "2.9.1",
+    "enzyme-to-json": "1.5.1",
+    "jest": "^26.0.1",
+    "react-test-renderer": "15.6.1"
   }
 }
