--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "start" : "node server/server.js",
-    "heroku-postbuild" : "npm run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -27,6 +27,7 @@
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "normalize.css": "7.0.0",
+    "numeral": "^2.0.6",
     "package-lock-only": "0.0.4",
     "react": "15.6.1",
     "react-addons-shallow-compare": "15.6.0",
@@ -34,7 +35,7 @@
     "react-dom": "15.6.1",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
-    "react-router-dom": "4.1.2",
+    "react-router-dom": "^5.2.0",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
@@ -44,11 +45,11 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
     "enzyme": "2.9.1",
     "enzyme-to-json": "1.5.1",
-    "jest": "^26.0.1",
-    "react-test-renderer": "15.6.1"
+    "jest": "^25.5.4",
+    "react-test-renderer": "15.6.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
