--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -23,6 +23,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
+    "firebase": "^7.15.5",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -37,6 +38,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "^5.2.0",
     "redux": "3.7.2",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
@@ -45,10 +47,13 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "enzyme": "2.9.1",
     "enzyme-to-json": "1.5.1",
     "jest": "^25.5.4",
     "react-test-renderer": "15.6.1",
+    "redux-mock-store": "^1.5.4",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
